nok-bng/portal/portal-auth-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-auth
  namespace: nok-bng
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portal-auth
  template:
    metadata:
      labels:
        app: portal-auth
    spec:
      containers:
      - name: auth
        image: ghcr.io/cspdevlabs/portal-auth:v1.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
