nok-bng/portal/portal-auth-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: portal-auth
  namespace: nok-bng
spec:
  selector:
    app: portal-auth
  ports:
  - port: 80
    targetPort: 8080
