nok-bng/portal/portal-bbm-grafana-proxy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bbm-grafana-proxy
  namespace: nok-bng
spec:
  type: ExternalName
  externalName: bbm-grafana-service.nok-bbm.svc.cluster.local
  ports:
  - port: 80
