nok-bng/portal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nok-apps-portal-ingress
  namespace: nok-bng
  annotations:
    nginx.ingress.kubernetes.io/auth-url: http://portal-auth.nok-bng.svc.cluster.local/auth
    nginx.ingress.kubernetes.io/auth-signin: http://bng.nok.local:8080/login?rd=$request_uri

spec:
  ingressClassName: nginx
  rules:
  - host: bng.nok.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nok-apps-portal-service
            port:
              number: 80
