nok-bng/portal/portal-health-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-health-ingress
  namespace: nok-bng

spec:
  ingressClassName: nginx

  rules:
  - host: bng.nok.local
    http:
      paths:
      - path: /healthz
        pathType: Exact
        backend:
          service:
            name: nok-apps-portal-service
            port:
              number: 80
