nok-bng/portal/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-auth-ingress
  namespace: nok-bng
spec:
  ingressClassName: nginx
  rules:
  - host: nanog.nok.local
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: portal-auth
            port:
              number: 80
